Day26-network-pol/deny-b-d-networkPolict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-backend-db
  namespace: ecommerce
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - backend
      - mysql
  policyTypes:
  - Ingress
# No inbound traffic is allowed
# So selected pods become default deny ingress.
